# avro-cli

./: .gitignore  README.md  pyproject.toml
src/avro_cli/: cli.py
src/avro_cli/commands/: diff.py  head.py  inspect.py
src/avro_cli/services/: avro_service.py  diff_service.py
src/avro_cli/utils/: avro_reader.py
tests/data/: 1.a.avro  1.b.avro
tests/services/: test_avro_service.py  test_diff_service.py
